--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Didot', serif;
     background-color: pink;
     text-align: center;
     padding: 50px;
